// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`motion variants > creates springy entrance variant 1`] = `
{
  "exit": {
    "opacity": 0,
    "scale": 0.96,
    "transition": {
      "duration": 0.2,
      "ease": [
        0.4,
        0,
        1,
        1,
      ],
    },
    "y": 4,
  },
  "hidden": {
    "opacity": 0,
    "scale": 0.92,
    "y": 8,
  },
  "show": {
    "opacity": 1,
    "scale": 1,
    "transition": {
      "damping": 24,
      "mass": 1,
      "stiffness": 180,
      "type": "spring",
    },
    "y": 0,
  },
}
`;

exports[`motion variants > matches expected fade blueprint 1`] = `
{
  "exit": {
    "opacity": 0,
    "transition": {
      "duration": 0.2,
      "ease": [
        0.2,
        0,
        0,
        1,
      ],
    },
  },
  "hidden": {
    "opacity": 0,
  },
  "show": {
    "opacity": 1,
    "transition": {
      "duration": 0.36,
      "ease": [
        0.2,
        0,
        0,
        1,
      ],
    },
  },
}
`;

exports[`motion variants > matches expected rise blueprint 1`] = `
{
  "exit": {
    "opacity": 0,
    "transition": {
      "duration": 0.2,
      "ease": [
        0.4,
        0,
        1,
        1,
      ],
    },
    "y": 8,
  },
  "hidden": {
    "opacity": 0,
    "y": 16,
  },
  "show": {
    "opacity": 1,
    "transition": {
      "duration": 0.36,
      "ease": [
        0.16,
        1,
        0.3,
        1,
      ],
    },
    "y": 0,
  },
}
`;

exports[`motion variants > provides slide variants per direction 1`] = `
{
  "exit": {
    "opacity": 0,
    "transition": {
      "duration": 0.2,
      "ease": [
        0.4,
        0,
        1,
        1,
      ],
    },
    "y": -8,
  },
  "hidden": {
    "opacity": 0,
    "y": -16,
  },
  "show": {
    "opacity": 1,
    "transition": {
      "duration": 0.36,
      "ease": [
        0.16,
        1,
        0.3,
        1,
      ],
    },
    "y": 0,
  },
}
`;

exports[`motion variants > provides slide variants per direction 2`] = `
{
  "exit": {
    "opacity": 0,
    "transition": {
      "duration": 0.2,
      "ease": [
        0.4,
        0,
        1,
        1,
      ],
    },
    "x": 10,
  },
  "hidden": {
    "opacity": 0,
    "x": 20,
  },
  "show": {
    "opacity": 1,
    "transition": {
      "duration": 0.36,
      "ease": [
        0.16,
        1,
        0.3,
        1,
      ],
    },
    "x": 0,
  },
}
`;

exports[`motion variants > scale variant respects provided factor 1`] = `
{
  "exit": {
    "opacity": 0,
    "scale": 0.88,
    "transition": {
      "duration": 0.2,
      "ease": [
        0.4,
        0,
        1,
        1,
      ],
    },
  },
  "hidden": {
    "opacity": 0,
    "scale": 0.9,
  },
  "show": {
    "opacity": 1,
    "scale": 1,
    "transition": {
      "duration": 0.36,
      "ease": [
        0.16,
        1,
        0.3,
        1,
      ],
    },
  },
}
`;

exports[`motion variants > stagger container scales with delay 1`] = `
{
  "hidden": {},
  "show": {
    "transition": {
      "delayChildren": 0.12,
      "staggerChildren": 0.08,
    },
  },
}
`;
